Moved gallery code to it's respective file.

--- a/index.html
+++ b/index.html
@@ -31,12 +31,11 @@
           </div>
           <div class="callout primary">
             <div class="row column">
-              <div id="example"></div>
               <h1>Hello! This is the portfolio of a very witty person.</h1>
               <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla.</p>
             </div>
           </div>
-          <div id="Gallery" class="row small-up-2 medium-up-3 large-up-4">
+          <div id="Gallery">
 
           </div>
           <hr>
