--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 
    <script src="bower_components/jquery/dist/jquery.js"></script>
    <script src="bower_components/what-input/what-input.js"></script>
-   <script src="bower_components/foundation-sites/dist/foundation.js"></script>
+   <script src="bower_components/foundation-sites/dist/foundation.min.js"></script>
    <script src="js/app.js"></script>
    <script src="bundle.js"></script>
+   <script type="text/javascript" src="https://intercom.zurb.com/scripts/zcom.js"></script>
   </body>
 </html>
